--- a/lectures/14_synthetic_dind.tex
+++ b/lectures/14_synthetic_dind.tex
@@ -595,7 +595,7 @@
   \end{wideitemize}
 \end{frame}
 
-\begin{frame}{So what about synthetic method?}
+\begin{frame}{So what about synthetic methods?}
   \begin{wideitemize}
   \item Many authors (mainly econometricians) argue that this is a burgeoning innovative field
     \begin{itemize}
