--- a/lectures/15_iv_partI.tex
+++ b/lectures/15_iv_partI.tex
@@ -388,7 +388,6 @@
     \item Historical precedent is part of it -- linear demand systems
     \item But, it turns out it is ``optimal'' in a particular sense
     \end{itemize}
-  \item Consider 
   \end{wideitemize}
 \end{frame}
 
@@ -644,16 +643,6 @@
   \end{wideitemize}
 \end{frame}
 
-\begin{frame}{Quick aside on Wald ratio and 2SLS}
-  \begin{wideitemize}
-  \item Note that with a binary $Z$ and a binary $D$, 2SLS is exactly the Wald ratio
-    \begin{align*}
-      \tau_{2SLS} &= \frac{Cov(Z_{i}, Y_{i})}{Cov(Z_{i}, D_{i})}\\
-    \end{align*}
-  \end{wideitemize}
-  
-\end{frame}
-
 \begin{frame}{Loosening restrictiveness + 2SLS}
   \begin{wideitemize}
   \item This setup is very specific (two binary measures) but it is
@@ -664,7 +653,7 @@
     \item Key concept is an average causal reponse curve --
       effectively a combination of weighted derivatives, depending on
       where the instrument shifts participation
-    \item See Angrist Imbens (1995)
+    \item See Angrist Imbens (1995, JASA)
     \end{itemize}
   \end{wideitemize}
 \end{frame}
