--- a/syllabus.tex
+++ b/syllabus.tex
@@ -263,9 +263,9 @@ ECON 550, ECON 551
     \item  ``Omitted variable bias of Lasso-based inference methods: A finite sample analysis'' Wuthrich and Zhu (2020)
     \end{itemize}
   \end{enumerate}
-\item \underline{Maximum Likelihood, Bayesian Methods, Generalized Method of Moments, and Minimum Distance}
+\item \underline{Likelihood Methods}
   \begin{enumerate}
-  \item Discrete Choice Models I
+  \item Discrete Choice Models I 
     \begin{itemize}
     \item ``Discrete Choice Methods with Simulation'' Train (2009) \url{https://eml.berkeley.edu/books/choice2.html}
     \end{itemize}
@@ -336,7 +336,7 @@ ECON 550, ECON 551
     \end{itemize}
   \item Judge IV
     \begin{itemize}
-    \item ``Consumer bankruptcy and financial health'' Dobbie, Goldsmith-Pinkham and Song (2016)
+    \item ``Consumer bankruptcy and financial health'' Dobbie, Goldsmith-Pinkham and Yang (2016)
     \item ``The criminal and labor market impacts of incarceration.'' Mueller-Smith (2015)
     \item ``Judging Judge Fixed Effects'' Frandsen, Lefgren and Leslie (2020)
     \item ``Racial bias in bail decisions'' Arnold, Dobbie, and Yang (2018)
