--- a/lectures/15_iv_partI.tex
+++ b/lectures/15_iv_partI.tex
@@ -145,7 +145,7 @@
   \end{frame}
 }
 
-\title[]{\textcolor{blue}{Canonical Research Designs II:\\ Instrumental Variables I }}
+\title[]{\textcolor{blue}{Canonical Research Designs III:\\ Instrumental Variables I }}
 \author[PGP]{}
 \institute[FRBNY]{\small{\begin{tabular}{c}
   Paul Goldsmith-Pinkham  \\
