--- a/syllabus.tex
+++ b/syllabus.tex
@@ -324,7 +324,11 @@ ECON 550, ECON 551
     \item ``Weak instruments in instrumental variables regression: Theory and practice'' Andrews, Stock and Sun (2019)
     \item ``Jackknife instrumental variables estimation'' Angrist, Imbens and Krueger (1999)
     \item ``Random effects estimators with many instrumental variables'' Chamberlain and Imbens (2004)
-    \item ``Tolerating defiance? Local average treatment effects without monotonicity'' de Chaisemartin 
+    \item ``Tolerating defiance? Local average treatment effects without monotonicity'' de Chaisemartin
+    \item ``Weak Instruments in Instrumental Variables Regression: Theory and Practice'', Andrews, Stock and Sun (2018)
+    \item ``Local instrumental variables and latent variable models
+      for identifying and bounding treatment effects'' Heckman and
+      Vytlacil (1999)
     \end{itemize}
   \item Bartik + Simulated Instruments
     \begin{itemize}
