--- a/lectures/17_iv_partIII.tex
+++ b/lectures/17_iv_partIII.tex
@@ -145,7 +145,7 @@
   \end{frame}
 }
 
-\title[]{\textcolor{blue}{Canonical Research Designs IV:\\ Instrumental Variables II }}
+\title[]{\textcolor{blue}{Canonical Research Designs IV:\\ Instrumental Variables III }}
 \author[PGP]{}
 \institute[FRBNY]{\small{\begin{tabular}{c}
   Paul Goldsmith-Pinkham  \\
@@ -337,7 +337,7 @@
   \begin{wideitemize}
   \item<1-> Imagine a marginally significant first stage (se = 0.05, estimate = 0.1)
   \item<1-> This estimator is normal, and reasonably well-behaved
-  \item<2-> However, the relationship between $\hat{\tau}$ and
+  \item<2-> However, the relationship between $\hat{\pi}$ and
     $\hat{\beta}$ is highly nonlinear near zero
   \item<3-> This makes the distribution for $\hat{\beta}$ very
     non-normal
