--- a/lectures/19_judge_iv.tex
+++ b/lectures/19_judge_iv.tex
@@ -460,7 +460,8 @@
           \item monotonicity -- e.g. we need an ordering in the effects
           \end{enumerate}
         \item The last two are the challenging part, and not
-          inherently testable. Let's discuss the issues, but first
+          inherently testable. Let's discuss the issues, but first,
+          how is this done in practice?
       \end{wideitemize}
     \end{column}%
     \hfill%
