--- a/lectures/21_regression_discontinuity_2.tex
+++ b/lectures/21_regression_discontinuity_2.tex
@@ -618,6 +618,15 @@
     \end{columns}
 \end{frame}
 
+\begin{frame}{Next time}
+  \begin{wideitemize}
+  \item Discrete RD
+  \item Bias from RD estimation
+  \item Regression Kink
+    \item Bounds on treatment effects
+  \end{wideitemize}
+  
+\end{frame}
 
 
 
