--- a/lectures/24_machine_learning_2.tex
+++ b/lectures/24_machine_learning_2.tex
@@ -147,7 +147,7 @@
   \end{frame}
 }
 
-\title[]{\textcolor{blue}{Supervised Machine Learning I: Prediction}} \author[PGP]{}
+\title[]{\textcolor{blue}{Supervised Machine Learning II: \\ Heterogeneous Treatment Effects}} \author[PGP]{}
 \institute[FRBNY]{\small{\begin{tabular}{c}
                            Paul Goldsmith-Pinkham  \\
 \end{tabular}}}
